- include bio- in the selector of FormFieldComponent, ErrorComponent, ErrorsDirective and HintDirective

--- a/src/app/admin/admin-ban-user/admin-ban-user.component.html
+++ b/src/app/admin/admin-ban-user/admin-ban-user.component.html
@@ -2,7 +2,7 @@
 <form [controlGroup]="form">
   <bio-card>
     <bio-card-content>
-      <form-field label="Search">
+      <bio-form-field label="Search">
         <input
           bioInput
           placeholder="At least 3 characters are required to search"
@@ -10,7 +10,7 @@
           controlName="term"
           autocomplete="off"
         />
-      </form-field>
+      </bio-form-field>
     </bio-card-content>
   </bio-card>
 
