--- a/src/app/admin/admin-rules/admin-rules.component.html
+++ b/src/app/admin/admin-rules/admin-rules.component.html
@@ -15,7 +15,7 @@
         <div class="icon-wrapper drag">
           <bio-icon cdkDragHandle>drag_handle</bio-icon>
         </div>
-        <form-field *ngIf="ruleControl.value$ | async as ruleValue" label="{{ ruleValue.order }}">
+        <bio-form-field *ngIf="ruleControl.value$ | async as ruleValue" label="{{ ruleValue.order }}">
           <textarea
             bioInput
             controlName="description"
@@ -23,11 +23,11 @@
             [cdkAutosizeMinRows]="1"
             [cdkAutosizeMaxRows]="6"
           ></textarea>
-          <errors>
-            <error *error="'required'">Description is required</error>
-            <error *error="'whiteSpace'">Description is required</error>
-          </errors>
-        </form-field>
+          <bio-errors>
+            <bio-error *error="'required'">Description is required</bio-error>
+            <bio-error *error="'whiteSpace'">Description is required</bio-error>
+          </bio-errors>
+        </bio-form-field>
         <div class="icon-wrapper delete">
           <button bioButton icon type="button" (click)="deleteRule($index)">
             <bio-icon>delete</bio-icon>
