--- a/src/app/auth/change-password/change-password-confirm/change-password-confirm.component.html
+++ b/src/app/auth/change-password/change-password-confirm/change-password-confirm.component.html
@@ -7,7 +7,7 @@
         (focusoutLastItem)="inputPassword.focus()"
         label="Confirmation code"
       ></bio-confirmation-code-input>
-      <form-field label="Old password">
+      <bio-form-field label="Old password">
         <input
           bioInput
           placeholder="Password"
@@ -19,11 +19,11 @@
         <button bioSuffix bioButton icon type="button" (click)="hideOldPassword = !hideOldPassword">
           <bio-icon>{{ hideOldPassword ? 'visibility_off' : 'visibility' }}</bio-icon>
         </button>
-        <errors>
-          <error *error="'required'">Old password is required</error>
-        </errors>
-      </form-field>
-      <form-field label="New password">
+        <bio-errors>
+          <bio-error *error="'required'">Old password is required</bio-error>
+        </bio-errors>
+      </bio-form-field>
+      <bio-form-field label="New password">
         <input
           bioInput
           placeholder="New password"
@@ -35,13 +35,15 @@
         <button bioSuffix bioButton icon type="button" (click)="hidePassword = !hidePassword">
           <bio-icon>{{ hidePassword ? 'visibility_off' : 'visibility' }}</bio-icon>
         </button>
-        <errors>
-          <error *error="'required'">New password is required</error>
-          <error *error="'minLength'; let error">New password must have at least {{ error.required }} characters</error>
-        </errors>
-      </form-field>
+        <bio-errors>
+          <bio-error *error="'required'">New password is required</bio-error>
+          <bio-error *error="'minLength'; let error"
+            >New password must have at least {{ error.required }} characters</bio-error
+          >
+        </bio-errors>
+      </bio-form-field>
       <bio-password-strong [password]="password$ | async"></bio-password-strong>
-      <form-field label="Confirm password">
+      <bio-form-field label="Confirm password">
         <input
           bioInput
           placeholder="Confirm new password"
@@ -52,15 +54,15 @@
         <button bioSuffix bioButton icon type="button" (click)="hideConfirmPassword = !hideConfirmPassword">
           <bio-icon>{{ hideConfirmPassword ? 'visibility_off' : 'visibility' }}</bio-icon>
         </button>
-        <errors>
-          <error *error="'required'">Confirm new password is required</error>
-          <error *error="'minLength'; let error">
+        <bio-errors>
+          <bio-error *error="'required'">Confirm new password is required</bio-error>
+          <bio-error *error="'minLength'; let error">
             Confirm new password must have at least {{ error.required }} characters
-          </error>
-          <error *error="'siblingEquals'">New passwords doesn't match</error>
-          <error *error="'siblingNotEquals'">New password is the same as the old password</error>
-        </errors>
-      </form-field>
+          </bio-error>
+          <bio-error *error="'siblingEquals'">New passwords doesn't match</bio-error>
+          <bio-error *error="'siblingNotEquals'">New password is the same as the old password</bio-error>
+        </bio-errors>
+      </bio-form-field>
       <p class="text-danger" *ngIf="error">{{ error }}</p>
     </bio-card-content>
     <bio-card-actions>
