--- a/src/app/auth/shared/confirmation-code-input/confirmation-code-input.component.html
+++ b/src/app/auth/shared/confirmation-code-input/confirmation-code-input.component.html
@@ -16,7 +16,7 @@
     />
   </div>
   <div class="errors">
-    <error *ngIf="arrayControl.invalid && isTouched">Invalid code</error>
+    <bio-error *ngIf="arrayControl.invalid && isTouched">Invalid code</bio-error>
     <span class="error" *ngIf="codeError">{{ codeError }}</span>
   </div>
 </form>
