--- a/src/app/auth/auth-steam/steam-register/steam-register.component.html
+++ b/src/app/auth/auth-steam/steam-register/steam-register.component.html
@@ -14,13 +14,13 @@
 
       <ng-template #emailForm>
         <p>Fill the box with your e-mail and click register to complete your registration</p>
-        <form-field label="E-mail">
+        <bio-form-field label="E-mail">
           <input autocomplete="email" placeholder="E-mail" bioInput controlName="email" type="email" />
-          <errors>
-            <error *error="'email'">This e-mail is not valid</error>
-            <error *error="'required'">E-mail is required</error>
-          </errors>
-        </form-field>
+          <bio-errors>
+            <bio-error *error="'email'">This e-mail is not valid</bio-error>
+            <bio-error *error="'required'">E-mail is required</bio-error>
+          </bio-errors>
+        </bio-form-field>
       </ng-template>
     </bio-card-content>
     <bio-card-actions end>
