--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -8,7 +8,7 @@
         label="Confirmation code"
         [codeError]="confirmCodeError"
       ></bio-confirmation-code-input>
-      <form-field label="New password">
+      <bio-form-field label="New password">
         <input
           #inputNewPassword
           autocomplete="new-password"
@@ -17,22 +17,22 @@
           controlName="password"
           type="password"
         />
-        <errors>
-          <error *error="'required'">New password is required</error>
-        </errors>
-      </form-field>
+        <bio-errors>
+          <bio-error *error="'required'">New password is required</bio-error>
+        </bio-errors>
+      </bio-form-field>
       <bio-password-strong [password]="password$ | async"></bio-password-strong>
     </bio-card-content>
     <ng-template #email>
       <bio-card-content>
         <p>Forgot your password? No problemo, just fill the box bellow with your e-mail and hit the button</p>
-        <form-field label="E-mail">
+        <bio-form-field label="E-mail">
           <input autocomplete="email" placeholder="E-mail" bioInput controlName="email" type="email" />
-          <errors>
-            <error *error="'email'">This e-mail is not valid</error>
-            <error *error="'required'">E-mail is required</error>
-          </errors>
-        </form-field>
+          <bio-errors>
+            <bio-error *error="'email'">This e-mail is not valid</bio-error>
+            <bio-error *error="'required'">E-mail is required</bio-error>
+          </bio-errors>
+        </bio-form-field>
       </bio-card-content>
     </ng-template>
 
