--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -2,20 +2,20 @@
   <bio-card class="center-block-mobile">
     <h3 bioCardTitle>Login</h3>
     <bio-card-content>
-      <form-field>
+      <bio-form-field>
         <label>Username</label>
         <input autocomplete="username" bioInput controlName="username" autocapitalize="off" />
-        <errors>
-          <error *error="'required'">Username is required</error>
-        </errors>
-      </form-field>
-      <form-field>
+        <bio-errors>
+          <bio-error *error="'required'">Username is required</bio-error>
+        </bio-errors>
+      </bio-form-field>
+      <bio-form-field>
         <label>Password</label>
         <input [type]="typePassword" autocomplete="current-password" bioInput controlName="password" />
-        <hint end><a routerLink="../forgot-password">Forgot password?</a></hint>
-        <errors>
-          <error *error="'required'">Password is required</error>
-        </errors>
+        <bio-hint end><a routerLink="../forgot-password">Forgot password?</a></bio-hint>
+        <bio-errors>
+          <bio-error *error="'required'">Password is required</bio-error>
+        </bio-errors>
         <button
           bioSuffix
           bioButton
@@ -25,7 +25,7 @@
         >
           <bio-icon>{{ typePassword === 'password' ? 'visibility_off' : 'visibility' }}</bio-icon>
         </button>
-      </form-field>
+      </bio-form-field>
       <bio-checkbox controlName="rememberMe"> Remember me </bio-checkbox>
       <p *ngIf="error" class="text-danger">{{ error }}</p>
     </bio-card-content>
