--- a/src/app/score/score-add/score-add-player/score-add-player.component.html
+++ b/src/app/score/score-add/score-add-player/score-add-player.component.html
@@ -28,7 +28,7 @@
     </label>
   </h3>
   <bio-card-content>
-    <form-field *ngIf="!first || (isAdmin$ | async)" [loading]="playersLoading" [disabled]="disabled">
+    <bio-form-field *ngIf="!first || (isAdmin$ | async)" [loading]="playersLoading" [disabled]="disabled">
       <label class="required">Player</label>
       <input
         bioInput
@@ -50,9 +50,9 @@
           {{ player.personaName }}
         </bio-autocomplete-option>
       </bio-autocomplete>
-      <errors controlError="idPlayer">
-        <error *error="'required'">Player is required</error>
-      </errors>
+      <bio-errors controlError="idPlayer">
+        <bio-error *error="'required'">Player is required</bio-error>
+      </bio-errors>
       <button
         type="button"
         bioButton
@@ -64,12 +64,12 @@
       >
         <bio-icon>search</bio-icon>
       </button>
-      <hint *ngIf="!(idPlayerControl.hasErrors$ | async)">
+      <bio-hint *ngIf="!(idPlayerControl.hasErrors$ | async)">
         You need to select a player, just typing its name doesn't work
-      </hint>
-    </form-field>
+      </bio-hint>
+    </bio-form-field>
     <!--<editor-fold desc="Character">-->
-    <form-field [loading]="charactersLoading" [disabled]="disabled" label="Character">
+    <bio-form-field [loading]="charactersLoading" [disabled]="disabled" label="Character">
       <bio-select controlName="idCharacterCostume" placeholder="Character" #select>
         <bio-option disabled *ngIf="charactersLoading"><spinner [size]="0.1"></spinner> Loading...</bio-option>
         <bio-optgroup
@@ -86,30 +86,30 @@
           </bio-option>
         </bio-optgroup>
       </bio-select>
-      <errors>
-        <error *error="'required'">Character is required</error>
-      </errors>
-    </form-field>
+      <bio-errors>
+        <bio-error *error="'required'">Character is required</bio-error>
+      </bio-errors>
+    </bio-form-field>
     <!--</editor-fold>-->
-    <form-field label="Description" [disabled]="disabled">
+    <bio-form-field label="Description" [disabled]="disabled">
       <input bioInput controlName="description" placeholder="Description" />
-      <errors>
-        <error *error="'required'">Description is required</error>
-      </errors>
-    </form-field>
-    <form-field label="Bullet kills" [disabled]="disabled">
+      <bio-errors>
+        <bio-error *error="'required'">Description is required</bio-error>
+      </bio-errors>
+    </bio-form-field>
+    <bio-form-field label="Bullet kills" [disabled]="disabled">
       <input bioInput controlName="bulletKills" placeholder="Number of bullet kills" type="number" />
-      <errors>
-        <error *error="'required'">Bullet kills is required</error>
-      </errors>
-    </form-field>
-    <form-field label="Evidence" [disabled]="disabled">
+      <bio-errors>
+        <bio-error *error="'required'">Bullet kills is required</bio-error>
+      </bio-errors>
+    </bio-form-field>
+    <bio-form-field label="Evidence" [disabled]="disabled">
       <input bioInput controlName="evidence" placeholder="Evidence video URL" type="url" />
-      <errors>
-        <error *error="'required'">Evidence is required</error>
-        <error *error="'url'">Evidence must be an URL</error>
-      </errors>
-    </form-field>
+      <bio-errors>
+        <bio-error *error="'required'">Evidence is required</bio-error>
+        <bio-error *error="'url'">Evidence must be an URL</bio-error>
+      </bio-errors>
+    </bio-form-field>
     <a *ngIf="evidenceControl.valid" bio-url-preview [url]="evidence$ | async"></a>
   </bio-card-content>
 </bio-card>
