--- a/src/app/shared/url-preview/url-preview.component.html
+++ b/src/app/shared/url-preview/url-preview.component.html
@@ -18,7 +18,7 @@
 </ng-container>
 <ng-template #skeleton>
   <div class="img skeleton">
-    <spinner medium></spinner>
+    <bio-spinner medium></bio-spinner>
   </div>
   <div class="body skeleton">Loading url preview...</div>
 </ng-template>
