--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -26,15 +26,15 @@
           <bio-icon>add</bio-icon>
           <ng-container *ngIf="!isMobile">Submit score</ng-container>
         </a>
-        <button type="button" bioButton [menuTrigger]="menu">
+        <button type="button" bioButton [bioMenuTrigger]="menu">
           <bio-icon>person</bio-icon>
           <ng-container *ngIf="!isMobile">{{ user.username }}</ng-container>
           <bio-icon class="triangle" [mdi]="mdiTriangle" [size]="8"></bio-icon>
         </button>
         <bio-menu #menu>
-          <a bioButton menuItem [routerLink]="pathToProfile$ | async"> <bio-icon>person</bio-icon> Profile </a>
-          <a bioButton menuItem routerLink="/auth/change-password"> <bio-icon>vpn_key</bio-icon> Change password</a>
-          <button type="button" bioButton menuItem (click)="logout()">
+          <a bioButton bioMenuItem [routerLink]="pathToProfile$ | async"> <bio-icon>person</bio-icon> Profile </a>
+          <a bioButton bioMenuItem routerLink="/auth/change-password"> <bio-icon>vpn_key</bio-icon> Change password</a>
+          <button type="button" bioButton bioMenuItem (click)="logout()">
             <bio-icon>logout</bio-icon>
             Logout
           </button>
