--- a/src/app/shared/components/button/button.component.html
+++ b/src/app/shared/components/button/button.component.html
@@ -1,4 +1,4 @@
-<spinner [size]="bioSize === 'large' ? 0.2 : 0.1" *ngIf="loading"></spinner>
+<bio-spinner [size]="bioSize === 'large' ? 0.2 : 0.1" *ngIf="loading"></bio-spinner>
 <span class="button-content-wrapper">
   <ng-content></ng-content>
 </span>
